--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "author": "group-00",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "minimist": "^1.2.7"
   }
 }
