--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,8 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "express": "^4.18.2",
-    "minimist": "^1.2.7"
-  }
+    "minimist": "^1.2.7",
+    "mysql2": "^2.3.3"
+  },
+  "type": "module"
 }
