--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "author": "group-00",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "minimist": "^1.2.7",
     "mysql2": "^2.3.3"
